Fixed Background issue with whitespace showing up when things get big

--- a/src/About.css
+++ b/src/About.css
@@ -6,4 +6,29 @@
 }
 .AboutContent{
     padding-top: 4em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.AboutTitle{
+    font-size: 2.5em;
+}
+table{
+    width: 85%;
+    border: 1px solid #000000;
+    border-collapse: collapse;
+}
+th{
+    text-align: center;
+    border: 1px solid #000000;
+    width: 50%;
+    font-size: 2em;
+}
+td{
+    text-align: left;
+    border: 1px solid #000000;
+    width: 50%;
+    padding: 1.2em;
+    font-size: 1.5em;
 }
