--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,15 @@
+body{
+  background-image: url('http://earlham.edu/media/2261474/hero-facilities.jpg');
+  background-size: 100%;
+  width: 100%;
+  height: 100%;
+  color: #E7D9CA;
+}
 .App {
   display: flex;
   flex-direction: column;
   text-align: center;
   position: absolute;
-  background-image: url('http://earlham.edu/media/2261474/hero-facilities.jpg');
-  background-size: cover;
-  width: 100%;
-  height: 100%;
-  color: #E7D9CA;
-  
 }
 .App-intro {
   font-size: large;
